staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 09:40:17.</p>
+<p>Last compiled Friday, March 14, 2014 - 09:42:32.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -236,12 +236,12 @@ path below will be dependent on the operating system you are using.</p>
 
 <p>If the output does not specify the path to <code>bash</code>, the path to <code>bash</code> is not properly configured.</p>
 
-<p>To interact with Git, find the program named Git Bash.  Git Bash is the command line environment windows uses to interact with Git.  Git Bash should be located in the Git directory within your Start Menu provided you performed a default installation.</p>
+<p>To interact with Git, find the program named Git Bash.  Git Bash is the command line environment Windows uses to interact with Git.  Git Bash should be located in the Git directory within your Start Menu provided you performed a default installation.</p>
 
 <h2>Initial Setup</h2>
 
 <p>If you have never used git before, you need to do some setup first.  Run the following
-commands so that git knows your name and email.  The commands are all issued in the
+commands so that Git knows your name and email.  The commands are all issued in the
 Terminal (Mac) or at the command prompt of Git Bash (Windows).  The Terminal 
 application is usually found in <code>/applications/Utilities</code>. A quick way to open a 
 <strong>terminal</strong> window is by clicking on the magnifying glass icon and typing <em>terminal</em> in spotlight.  </p>
@@ -346,7 +346,6 @@ Changes not staged for commit:
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
-    modified:   images/TerminalWindow.png
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -361,9 +360,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 40ebe57] staging all files
- 4 files changed, 56 insertions(+), 50 deletions(-)
- rewrite Git/images/TerminalWindow.png (98%)
+<pre><code>[master 651f980] staging all files
+ 3 files changed, 48 insertions(+), 44 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -415,7 +413,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 40ebe573e380951f4ae13e744d6d880d3f94b9a1
+<pre><code>commit 651f980768c532ff7ce6b0b8e3bac8e8a825dae3
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 09:42:32 2014 -0400
+
+    staging all files
+
+commit 40ebe573e380951f4ae13e744d6d880d3f94b9a1
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 09:40:17 2014 -0400
 
@@ -426,12 +430,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 09:35:44 2014 -0400
 
     staging all files
-
-commit ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 09:24:13 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -439,9 +437,9 @@ Date:   Fri Mar 14 09:24:13 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>40ebe573e380951f4ae13e744d6d880d3f94b9a1 staging all files
+<pre><code>651f980768c532ff7ce6b0b8e3bac8e8a825dae3 staging all files
+40ebe573e380951f4ae13e744d6d880d3f94b9a1 staging all files
 0c0ff3b0b5d0610054686c17768ac5ebc10cd670 staging all files
-ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -449,9 +447,9 @@ ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5 staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>40ebe57 Fri Mar 14 09:40:17 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>651f980 Fri Mar 14 09:42:32 2014 -0400- staging all files [Alan Arnholt]
+40ebe57 Fri Mar 14 09:40:17 2014 -0400- staging all files [Alan Arnholt]
 0c0ff3b Fri Mar 14 09:35:44 2014 -0400- staging all files [Alan Arnholt]
-ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -459,7 +457,13 @@ ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>40ebe57 Fri Mar 14 09:40:17 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>651f980 Fri Mar 14 09:42:32 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  4 ++--
+ Git/GitOne.html | 48 +++++++++++++++++++++++++-----------------------
+ Git/GitOne.md   | 40 +++++++++++++++++++++-------------------
+ 3 files changed, 48 insertions(+), 44 deletions(-)
+
+40ebe57 Fri Mar 14 09:40:17 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd                |   2 +-
  Git/GitOne.html               |  55 ++++++++++++++++++++++--------------------
  Git/GitOne.md                 |  49 +++++++++++++++++++------------------
@@ -471,12 +475,6 @@ ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 51 +++++++++++++++++++++++----------------------------
  Git/GitOne.md   | 43 +++++++++++++++++++------------------------
  3 files changed, 50 insertions(+), 56 deletions(-)
-
-ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.html               |  49 ++++++++++++++++++++++++------------------
- Git/GitOne.md                 |  43 ++++++++++++++++++++----------------
- Git/images/MacGitDownload.png | Bin 38827 -&gt; 42135 bytes
- 3 files changed, 53 insertions(+), 39 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
