--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 10:18:24.</p>
+<p>Last compiled Friday, March 14, 2014 - 10:20:52.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -302,7 +302,7 @@ branch.master.merge=refs/heads/master
 <p>&ldquo;GitHub is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both paid plans for private repositories, and free accounts for open source projects. The site was launched in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett.&rdquo;(<a href="http://en.wikipedia.org/wiki/GitHub">http://en.wikipedia.org/wiki/GitHub</a>)</p>
 
 <p>Qualified faculty members can request free private accounts to use with their classes.
-To request a discount, which actually pays the whole price for 10 private repositories for qualified faculty, click on the request a discount at <a href="https://education.github.com">https://education.github.com</a>.  A step-by-step guide for setting up your GitHub organization for classroom use can be found at <a href="https://education.github.com/guide">https://education.github.com/guide</a>.  Free private repositories for anyone are available at <a href="https://bitbucket.org">https://bitbucket.org</a>.</p>
+To request a discount, which actually pays the whole price for 10 private repositories for qualified faculty, click on the request a discount at <a href="https://education.github.com">https://education.github.com</a>.  A step-by-step guide for setting up your GitHub organization for classroom use can be found at <a href="https://education.github.com/guide">https://education.github.com/guide</a>.  Free private repositories for anyone can be created at <a href="https://bitbucket.org">https://bitbucket.org</a>.  Bitbucket, like GitHub, is a web based hosting service that uses the Git revision control system.</p>
 
 <h2>Creating a GitHub Account</h2>
 
@@ -371,7 +371,7 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 3c1d6c7] staging all files
+<pre><code>[master b90a7ce] staging all files
  3 files changed, 40 insertions(+), 41 deletions(-)
 </code></pre>
 
@@ -424,7 +424,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 3c1d6c7fdae37810bd991f50c1294b3eb2cf2589
+<pre><code>commit b90a7ce55947cb393a740d450e7940e803bf473a
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 10:20:52 2014 -0400
+
+    staging all files
+
+commit 3c1d6c7fdae37810bd991f50c1294b3eb2cf2589
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 10:18:24 2014 -0400
 
@@ -435,12 +441,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 10:16:35 2014 -0400
 
     staging all files
-
-commit ff100fd52f4fdd9288e588671820655e3f691697
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 10:14:04 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -448,9 +448,9 @@ Date:   Fri Mar 14 10:14:04 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>3c1d6c7fdae37810bd991f50c1294b3eb2cf2589 staging all files
+<pre><code>b90a7ce55947cb393a740d450e7940e803bf473a staging all files
+3c1d6c7fdae37810bd991f50c1294b3eb2cf2589 staging all files
 d40da7c5e46934a5ae426639622acb0e61e19821 staging all files
-ff100fd52f4fdd9288e588671820655e3f691697 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -458,9 +458,9 @@ ff100fd52f4fdd9288e588671820655e3f691697 staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>3c1d6c7 Fri Mar 14 10:18:24 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
+3c1d6c7 Fri Mar 14 10:18:24 2014 -0400- staging all files [Alan Arnholt]
 d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
-ff100fd Fri Mar 14 10:14:04 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -468,7 +468,13 @@ ff100fd Fri Mar 14 10:14:04 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>3c1d6c7 Fri Mar 14 10:18:24 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  2 +-
+ Git/GitOne.html | 42 +++++++++++++++++++++---------------------
+ Git/GitOne.md   | 37 ++++++++++++++++++-------------------
+ 3 files changed, 40 insertions(+), 41 deletions(-)
+
+3c1d6c7 Fri Mar 14 10:18:24 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  3 +--
  Git/GitOne.html | 42 +++++++++++++++++++++---------------------
  Git/GitOne.md   | 36 ++++++++++++++++++------------------
@@ -479,12 +485,6 @@ d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 43 +++++++++++++++++++++++--------------------
  Git/GitOne.md   | 38 +++++++++++++++++++++-----------------
  3 files changed, 45 insertions(+), 38 deletions(-)
-
-ff100fd Fri Mar 14 10:14:04 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  4 ++++
- Git/GitOne.html | 42 +++++++++++++++++++++---------------------
- Git/GitOne.md   | 36 ++++++++++++++++++------------------
- 3 files changed, 43 insertions(+), 39 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
