staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 10:20:52.</p>
+<p>Last compiled Friday, March 14, 2014 - 10:28:15.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -299,15 +299,31 @@ branch.master.merge=refs/heads/master
 
 <h3>What is GitHub?</h3>
 
-<p>&ldquo;GitHub is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both paid plans for private repositories, and free accounts for open source projects. The site was launched in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett.&rdquo;(<a href="http://en.wikipedia.org/wiki/GitHub">http://en.wikipedia.org/wiki/GitHub</a>)</p>
+<p>&ldquo;GitHub is a web-based hosting service for software development projects that use 
+the Git revision control system. GitHub offers both paid plans for private 
+repositories, and free accounts for open source projects. The site was launched 
+in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett.&rdquo;
+<a href="http://en.wikipedia.org/wiki/GitHub">http://en.wikipedia.org/wiki/GitHub</a></p>
 
 <p>Qualified faculty members can request free private accounts to use with their classes.
-To request a discount, which actually pays the whole price for 10 private repositories for qualified faculty, click on the request a discount at <a href="https://education.github.com">https://education.github.com</a>.  A step-by-step guide for setting up your GitHub organization for classroom use can be found at <a href="https://education.github.com/guide">https://education.github.com/guide</a>.  Free private repositories for anyone can be created at <a href="https://bitbucket.org">https://bitbucket.org</a>.  Bitbucket, like GitHub, is a web based hosting service that uses the Git revision control system.</p>
+To request a discount, which actually pays the whole price for 10 private repositories 
+for qualified faculty, click on the request a discount at 
+<a href="https://education.github.com">https://education.github.com</a>.  A step-by-step guide 
+for setting up your GitHub organization for classroom use can be found at 
+<a href="https://education.github.com/guide">https://education.github.com/guide</a>.<br/>
+Free private repositories for anyone can be created at 
+<a href="https://bitbucket.org">https://bitbucket.org</a>.  Bitbucket, like GitHub, is a web 
+based hosting service that uses the Git revision control system.</p>
 
 <h2>Creating a GitHub Account</h2>
 
 <p>Point your browser to <a href="https://github.com">https://github.com</a>,
-type a username in the <code>Pick a username</code> box (please use <code>firstlast</code>, for example my username is <code>alanarnholt</code>), enter your email (use your school email) in the <code>Your email</code> box, type in your password in the <code>Create a password</code> box. Then, click the <code>Sign up for GitHub</code> box and you will have a GitHub account.</p>
+type a username in the <code>Pick a username</code> box (please use <code>firstlast</code>, for example my 
+username is <code>alanarnholt</code>), enter your email (use your school email) in the 
+<code>Your email</code> box, type in your password in the <code>Create a password</code> box. Then, 
+click the <code>Sign up for GitHub</code> box and you will have a GitHub account.  You should 
+use the same name you used when you set up your <code>user.name</code> and <code>user.email</code> on your 
+local machine.</p>
 
 <h3>Creating a GitHub Repository</h3>
 
@@ -371,8 +387,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master b90a7ce] staging all files
- 3 files changed, 40 insertions(+), 41 deletions(-)
+<pre><code>[master eb15827] staging all files
+ 3 files changed, 56 insertions(+), 40 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -424,7 +440,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit b90a7ce55947cb393a740d450e7940e803bf473a
+<pre><code>commit eb1582756478113f1a10bddf2fda8a7172e9e60d
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 10:28:15 2014 -0400
+
+    staging all files
+
+commit b90a7ce55947cb393a740d450e7940e803bf473a
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 10:20:52 2014 -0400
 
@@ -435,12 +457,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 10:18:24 2014 -0400
 
     staging all files
-
-commit d40da7c5e46934a5ae426639622acb0e61e19821
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 10:16:35 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -448,9 +464,9 @@ Date:   Fri Mar 14 10:16:35 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>b90a7ce55947cb393a740d450e7940e803bf473a staging all files
+<pre><code>eb1582756478113f1a10bddf2fda8a7172e9e60d staging all files
+b90a7ce55947cb393a740d450e7940e803bf473a staging all files
 3c1d6c7fdae37810bd991f50c1294b3eb2cf2589 staging all files
-d40da7c5e46934a5ae426639622acb0e61e19821 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -458,9 +474,9 @@ d40da7c5e46934a5ae426639622acb0e61e19821 staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>eb15827 Fri Mar 14 10:28:15 2014 -0400- staging all files [Alan Arnholt]
+b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
 3c1d6c7 Fri Mar 14 10:18:24 2014 -0400- staging all files [Alan Arnholt]
-d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -468,7 +484,13 @@ d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>eb15827 Fri Mar 14 10:28:15 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  | 22 +++++++++++++++++++---
+ Git/GitOne.html | 40 ++++++++++++++++++++--------------------
+ Git/GitOne.md   | 34 +++++++++++++++++-----------------
+ 3 files changed, 56 insertions(+), 40 deletions(-)
+
+b90a7ce Fri Mar 14 10:20:52 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  2 +-
  Git/GitOne.html | 42 +++++++++++++++++++++---------------------
  Git/GitOne.md   | 37 ++++++++++++++++++-------------------
@@ -479,12 +501,6 @@ d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 42 +++++++++++++++++++++---------------------
  Git/GitOne.md   | 36 ++++++++++++++++++------------------
  3 files changed, 40 insertions(+), 41 deletions(-)
-
-d40da7c Fri Mar 14 10:16:35 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  2 +-
- Git/GitOne.html | 43 +++++++++++++++++++++++--------------------
- Git/GitOne.md   | 38 +++++++++++++++++++++-----------------
- 3 files changed, 45 insertions(+), 38 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
